--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "npm start",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
