--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 MONGODB_URI=mongodb+srv://koimilgaya:koimilgaya321@cluster0.v8panrh.mongodb.net/impact
 JWT_SECRET=koimilgaya
+CLOUDINARY_CLOUD_NAME=agarwalvivek
+CLOUDINARY_API_KEY=247343856174725
+CLOUDINARY_API_SECRET=aoodyLESqow6rcQROt1VakFmDfA
