--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-MONGODB_URI=mongodb+srv://koimilgaya:koimilgaya321@cluster0.v8panrh.mongodb.net/impact
+MONGODB_URI= mongodb+srv://Shirishk:captain%4013579@ic-cluster.8ykxtib.mongodb.net/?retryWrites=true&w=majority&appName=IC-Cluster
+
 JWT_SECRET=koimilgaya
 CLOUDINARY_CLOUD_NAME=agarwalvivek
 CLOUDINARY_API_KEY=247343856174725
